// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationBar render - custom page size options 1`] = `
<div>
  <EuiSpacer
    size="m"
  />
  <EuiTablePagination
    activePage={0}
    itemsPerPage={5}
    itemsPerPageOptions={
      Array [
        1,
        2,
        3,
      ]
    }
    onChangeItemsPerPage={[Function]}
    onChangePage={[Function]}
    pageCount={0}
  />
</div>
`;

exports[`PaginationBar render - hiding per page options 1`] = `
<div>
  <EuiSpacer
    size="m"
  />
  <EuiTablePagination
    activePage={0}
    hidePerPageOptions={true}
    itemsPerPage={5}
    itemsPerPageOptions={
      Array [
        10,
        25,
        50,
      ]
    }
    onChangeItemsPerPage={[Function]}
    onChangePage={[Function]}
    pageCount={0}
  />
</div>
`;

exports[`PaginationBar render 1`] = `
<div>
  <EuiSpacer
    size="m"
  />
  <EuiTablePagination
    activePage={0}
    itemsPerPage={5}
    itemsPerPageOptions={
      Array [
        10,
        25,
        50,
      ]
    }
    onChangeItemsPerPage={[Function]}
    onChangePage={[Function]}
    pageCount={0}
  />
</div>
`;
